# fswiki-lsp

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: release.yml
src/: actions.rs  analysis.rs  completion.rs  diagnostics.rs  documents.rs  editing.rs  formatter.rs  lib.rs  main.rs  parser.rs  server.rs  settings.rs  syntax.rs  text.rs
tests/: lsp_stdio.rs  sample_corpus.rs
