[package]
name = "fswiki-lsp"
version = "1.0.0"
edition = "2024"
rust-version = "1.95"
description = "Language Server Protocol implementation for FreeStyleWiki"
license = "MIT"

[dependencies]
arboard = { version = "3.6.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.53.0", features = ["io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp-server = "0.23"
unicode-width = "0.2.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
